# cmake_or-tools

./: .appveyor.yml  .dockerignore  .travis.yml  AUTHORS  CMakeLists.txt  CONTRIBUTORS  README.md
.github/workflows/: amd64_docker.yml  amd64_linux.yml  amd64_macos.yml  amd64_windows.yml  arm64_macos.yml  docker.yml  external_project.yml  fetch_content.yml  local_install.yml
.travis/: install.sh  script.sh
BasicExample/: CMakeLists.txt
BasicExample/src/: basic_example.cc
ExternalProject/: CMakeLists.txt
ExternalProject/Foo/include/foo/: Foo.hpp
ExternalProject/FooApp/: CMakeLists.txt
ExternalProject/FooApp/src/: main.cpp
ExternalProject/ci/: Makefile
ExternalProject/ci/docker/archlinux/: Dockerfile
ExternalProject/ci/docker/centos/: Dockerfile
ExternalProject/ci/docker/debian/: Dockerfile
ExternalProject/cmake/: CMakeLists.txt  Makefile  ortools.CMakeLists.txt
ExternalProject/cmake/sample/: main.cpp
FetchContent/: CMakeLists.txt
FetchContent/ci/docker/fedora/: Dockerfile
FetchContent/ci/docker/ubuntu/: Dockerfile
Foo/src/: Foo.cpp
FooApp/: CMakeLists.txt
LocalInstall/: CMakeLists.txt  setup.sh
LocalInstall/Foo/: CMakeLists.txt
LocalInstall/ci/: Makefile
LocalInstall/ci/docker/alpine/: Dockerfile
LocalInstall/ci/docker/centos/: Dockerfile
LocalInstall/ci/docker/opensuse/: Dockerfile
LocalInstall/cmake/: ortools.CMakeLists.txt
ci/: Makefile
ci/docker/almalinux/: Dockerfile
ci/docker/alpine/: Dockerfile
ci/docker/archlinux/: Dockerfile
ci/docker/centos/: Dockerfile
ci/docker/debian/: Dockerfile
ci/docker/fedora/: Dockerfile
ci/docker/opensuse/: Dockerfile
ci/docker/rockylinux/: Dockerfile
ci/docker/ubuntu/: Dockerfile
cmake/: BasicExampleConfig.cmake.in  ortools.CMakeLists.txt
cmake/sample/: CMakeLists.txt
